# kullm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: surname_classification_example.py
kullm/: main.py  settings.py
kullm/api/: surname_classification_router.py
kullm/domain/: commons.py  surname_req_res.py
kullm/service/: surname_classification_service.py  surname_classifier.py
kullm/util/: loggerutil.py  singleton.py  strutil.py
ui/: __init__.py  api_config.py  app.py
