[tool.poetry]
name = "kullm"
version = "1.0.0"
description = "LLMS for AICL434"
authors = ["Ashok Kumar Pant <asokpant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
